--- a/src/main/resources/static/proinventroy.html
+++ b/src/main/resources/static/proinventroy.html
@@ -140,7 +140,12 @@
                                         <button id="add_btn" type="button" class="am-btn am-btn-default am-btn-success"><span
                                                 class="am-icon-plus"></span> 新增
                                         </button>
-
+                                        <button id="import_btn" type="button" class="am-btn am-btn-default am-btn-secondary"><span
+                                                class="am-icon-upload"></span> 导入
+                                        </button>
+                                        <button id="export_btn" type="button" class="am-btn am-btn-default am-btn-warning"><span
+                                                class="am-icon-download"></span> 导出
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -664,6 +669,36 @@
         </div>
     </div>
 
+    <div class="am-modal am-modal-loading am-modal-no-btn" tabindex="-1" id="import-modal">
+        <div class="am-modal-dialog cus_modal_div">
+            <div class="am-modal-hd text-color">导入库存信息
+                <a href="javascript: void(0)" class="am-close am-close-spin" data-am-modal-close>&times;</a>
+            </div>
+            <div class="am-modal-bd">
+                <div class="widget-body am-fr">
+
+                    <form class="am-form tpl-form-line-form"  method="post" action="/api/proInventory/import" target="uploadFrame" enctype="multipart/form-data">
+                        <div class="am-form-group am-form-file">
+                            <button type="button" class="am-btn am-btn-danger am-btn-sm">
+                                <i class="am-icon-cloud-upload"></i> 选择要上传的文件</button>
+                            <input id="doc-form-file" type="file" name="file" multiple>
+                            <div id="file-list"></div>
+                        </div>
+
+                        <div class="am-form-group">
+                            <div class="am-u-sm-9 am-u-sm-push-1">
+                                <button type="submit"  id="import_prod_btn"
+                                        class="am-btn am-btn-primary tpl-btn-bg-color-success ">导入
+                                </button>
+                            </div>
+                        </div>
+                        <iframe id="uploadFrame" name="uploadFrame" src=""  style="display:none;" style="width: 0px" height="0px">
+                        </iframe>
+                    </form>
+                </div>
+        </div>
+    </div>
+
 </div>
 </div>
 </div>
@@ -904,6 +939,21 @@
             var params = toShowPageParams(pageNumber);
             renderTable($useTable, "/api/proInventory/listUseRecord", params, $("#use_page_ul"));
         });
+
+        $("#import_btn").click(function () {
+            $('#import-modal').modal();
+            swithModalTheme();
+        });
+
+        $('#doc-form-file').on('change', function() {
+            var fileNames = '';
+            $.each(this.files, function() {
+                fileNames += '<span class="am-badge">' + this.name + '</span> ';
+            });
+            $('#file-list').html(fileNames);
+        });
+
+
 
 
     })
